# ARCH2025-Rover

./: README.md  chassis_control_images_pygame.py  chassis_control_pygame.py
armSim/basic/: CMakeLists.txt  basicKangaArmSim.cpp  kangaArm.cpp  kangaArm.h
chassisSIm/: CMakeLists.txt  chassisSim.cpp  sensors.cpp
modules/custom/raisimSimulator/: raisimSimulator.cpp  raisimSimulator.h
modules/custom/rsTimedLoop/: rsTimedLoop.cpp  rsTimedLoop.h
modules/custom/utilities/: utils.cpp  utils.h
modules/localController/: CMakeLists.txt  getController.cpp  getController.h  getControllerTest.cpp
modules/models/hexapod/urdf/: hexapod.urdf  hexapodLeg.urdf  hexaposv2.urdf  hexaposv2Leg.urdf
modules/utilities/: utils.cpp  utils.h
rsc/huskyDemo/urdf/: husky.urdf
rsc/kanga/meshes/: BatBox.mtl  body.part  body.stl  drivetrainbackleftcomposite.part  drivetrainbackleftcomposite.stl  drivetrainbackrightcomposite.part  drivetrainbackrightcomposite.stl  drivetrainfrontleftcomposite.part  drivetrainfrontleftcomposite.stl  drivetrainfrontrightcomposite.part  drivetrainfrontrightcomposite.stl  fullwheelccw.part  fullwheelccw.stl  fullwheelcw.part  fullwheelcw.stl  suspensionleft.part  suspensionleft.stl  suspensionright.part  suspensionright.stl
rsc/kanga/sensors/: cameraDepth.xml  cameraRGB.xml  cameraRGBWide.xml  imu.xml
rsc/kanga/urdf/: kanga.urdf  kangaSensors.urdf
